Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-22954

MigrationDestinationManager should not directly use MMAPv1 durable interface

    • Fully Compatible
    • v3.4
    • Sharding 12 (04/01/16), Sharding 2017-03-27, Sharding 2017-04-17

      The MigrationDestinationManager calls getDur().commitNow(), which is an MMAPv1-specific feature and requires cleanup.

            Assignee:
            kaloian.manassiev@mongodb.com Kaloian Manassiev
            Reporter:
            kyle.suarez@mongodb.com Kyle Suarez
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: