SERVER-22954 Do not call into the MMAPV1 storage engine on the recipient shard

(cherry picked from commit 921f12c9aa005488ac93b672d74a63af51b93139)