src/mongo/db/s/migration_destination_manager.cpp
@@ -57,7 +57,6 @@
 #include "mongo/db/s/sharded_connection_info.h"
 #include "mongo/db/s/sharding_state.h"
 #include "mongo/db/service_context.h"
-#include "mongo/db/storage/mmap_v1/dur.h"
 #include "mongo/logger/ramlog.h"
 #include "mongo/s/catalog/type_chunk.h"
 #include "mongo/s/shard_key_pattern.h"
@@ -74,6 +73,15 @@ using str::stream;
 namespace {
 
 Tee* migrateLog = RamLog::get("migrate");
+
+const WriteConcernOptions kMajorityWriteConcern(WriteConcernOptions::kMajority,
+                                                // Note: Even though we're setting UNSET here,
+                                                // kMajority implies JOURNAL if journaling is
+                                                // supported by mongod and
+                                                // writeConcernMajorityJournalDefault is set to true
+                                                // in the ReplSetConfig.
+                                                WriteConcernOptions::SyncMode::UNSET,
+                                                -1);
 
 /**
  * Returns a human-readabale name of the migration manager's state.
@@ -139,26 +147,26 @@ bool willOverrideLocalId(OperationContext* txn,
 bool opReplicatedEnough(OperationContext* txn,
                         const repl::OpTime& lastOpApplied,
                         const WriteConcernOptions& writeConcern) {
-    WriteConcernOptions majorityWriteConcern;
-    majorityWriteConcern.wTimeout = -1;
-    majorityWriteConcern.wMode = WriteConcernOptions::kMajority;
-    Status majorityStatus = repl::getGlobalReplicationCoordinator()
-                                ->awaitReplication(txn, lastOpApplied, majorityWriteConcern)
-                                .status;
+    WriteConcernResult writeConcernResult;
 
-    if (!writeConcern.shouldWaitForOtherNodes()) {
-        return majorityStatus.isOK();
+    Status waitForMajorityWriteConcernStatus =
+        waitForWriteConcern(txn, lastOpApplied, kMajorityWriteConcern, &writeConcernResult);
+    if (!waitForMajorityWriteConcernStatus.isOK()) {
+        return false;
     }
 
     // Enforce the user specified write concern after "majority" so it covers the union of the 2
-    // write concerns
+    // write concerns in case the user's write concern is stronger than majority
     WriteConcernOptions userWriteConcern(writeConcern);
     userWriteConcern.wTimeout = -1;
-    Status userStatus = repl::getGlobalReplicationCoordinator()
-                            ->awaitReplication(txn, lastOpApplied, userWriteConcern)
-                            .status;
 
-    return majorityStatus.isOK() && userStatus.isOK();
+    Status waitForUserWriteConcernStatus =
+        waitForWriteConcern(txn, lastOpApplied, userWriteConcern, &writeConcernResult);
+    if (!waitForUserWriteConcernStatus.isOK()) {
+        return false;
+    }
+
+    return true;
 }
 
 /**
@@ -981,18 +989,6 @@ bool MigrationDestinationManager::_flushPendingWrites(OperationContext* txn,
 
     log() << "migrate commit succeeded flushing to secondaries for '" << ns << "' " << min << " -> "
           << max << migrateLog;
-
-    {
-        // Get global lock to wait for write to be commited to journal.
-        ScopedTransaction scopedXact(txn, MODE_S);
-        Lock::GlobalRead lk(txn->lockState());
-
-        // if durability is on, force a write to journal
-        if (getDur().commitNow(txn)) {
-            log() << "migrate commit flushed to journal for '" << ns << "' " << redact(min)
-                  << " -> " << redact(max) << migrateLog;
-        }
-    }
 
     return true;
 }
